<resources>
    <string name="app_name">WooCommerce</string>
    <string name="notification_channel_general_title">General</string>
    <string name="notification_channel_general_id" translatable="false" content_override="true">wooandroid_notification_channel_general_id</string>
    <string name="notification_channel_order_title">New order alerts</string>
    <string name="notification_channel_order_id" translatable="false" content_override="true">wooandroid_notification_channel_order_id</string>
    <string name="notification_channel_review_title">Product review alerts</string>
    <string name="notification_channel_review_id" translatable="false" content_override="true">wooandroid_notification_channel_review_id</string>
    <string name="notification_order_ringtone_title" translatable="false">WooCommerce Cha-ching</string>
    <string name="login_notification_channel_id" translatable="false" content_override="true">@string/notification_channel_general_id</string>
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="taxes">Taxes</string>
    <string name="subtotal">Subtotal</string>
    <string name="products_total">Products total</string>
    <string name="discount">Discount</string>
    <string name="details">Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="install">Install</string>
    <string name="update_downloaded">Woo has downloaded an update</string>
    <string name="update_failed">Woo update has failed</string>
    <string name="continue_button">Continue</string>
    <string name="refresh_button">Refresh</string>
    <string name="untitled">Untitled</string>
    <string name="cancel">Cancel</string>
    <string name="keep_editing">Keep editing</string>
    <string name="keep_changes">Keep changes</string>
    <string name="learn_more">Learn More</string>
    <string name="try_it_now">Try it now</string>
    <string name="offline_message">Offline \u2014 using cached data</string>
    <string name="offline_error">Your network is unavailable. Check your data or wifi connection.</string>
    <string name="product">Product</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="discard">Discard</string>
    <string name="products">Products</string>
    <string name="refunds">Refunds</string>
    <string name="shipping_labels">Shipping Labels</string>
    <string name="product_variations">Variations</string>
    <string name="product_variation_options">%1$s (%2$s options)</string>
    <string name="review_notifications">Reviews</string>
    <string name="version_with_name_param">Version %s</string>
    <string name="share_store_button">Share your store</string>
    <string name="share_store_dialog_title">Share your store\'s URL</string>
    <string name="emdash" translatable="false">\u2014</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="button_update_instructions">Update instructions</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_thanks">No thanks</string>
    <string name="apply">Apply</string>
    <string name="error_copy_to_clipboard">Error copying to clipboard</string>
    <string name="read_more">Read more</string>
    <string name="database_downgraded">Database downgraded, recreating tables and loading stores</string>
    <string name="button_not_now">Not now</string>
    <string name="unknown">Unknown</string>
    <string name="remove">Remove</string>
    <string name="try_again">Try again</string>
    <string name="update">Update</string>
    <string name="discard_message">Do you want to discard your changes?</string>
    <string name="discard_images_message">Product images are still uploading. Do you want to discard your changes?</string>
    <string name="more_options">More options</string>
    <string name="value_not_set">Not set</string>
    <string name="selection_count">%d selected</string>
    <string name="date_timeframe_future">Upcoming</string>
    <string name="date_timeframe_today">Today</string>
    <string name="date_timeframe_yesterday">Yesterday</string>
    <string name="date_timeframe_older_two_days">Older than 2 days</string>
    <string name="date_timeframe_older_week">Older than a week</string>
    <string name="date_timeframe_older_month">Older than a month</string>
    <string name="date_at_time">%1$s at %2$s</string>
    <string name="error_cant_open_url">Unable to open the link</string>
    <string name="error_please_choose_browser">Error opening the default web browser. Please choose another app:</string>
    <string name="error_no_phone_app">No phone app was found</string>
    <string name="error_no_email_app">No e-mail app was found</string>
    <string name="error_no_sms_app">No SMS app was found</string>
    <string name="enter_site_address" content_override="true">Enter the address of the WooCommerce store you\'d like to connect.</string>
    <string name="cant_open_url">Unable to open the link</string>
    <string name="already_logged_in_wpcom">You\'re already logged in a WordPress.com account, you can\'t add a WordPress.com site bound to another account.</string>
    <string name="at_username">\@%s</string>
    <string name="login_no_jetpack_username">Signed in as \@%1$s\nWrong account? %2$s</string>
    <string name="login_jetpack_required">This app requires Jetpack to connect to your store.</string>
    <string name="login">Log in</string>
    <string name="login_prologue_banner">Manage orders, track sales, and monitor store activity with real-time alerts.</string>
    <string name="login_configure_link">Read the %sconfiguration instructions%s.</string>
    <string name="login_pick_store">Pick store</string>
    <string name="login_connected_store">Connected store</string>
    <string name="login_verifying_site">Verifying site…</string>
    <string name="login_verifying_site_error">Cannot connect to %s</string>
    <string name="login_update_required_title">Update Store to WooCommerce 3.5</string>
    <string name="login_update_required_desc">This store uses an older version of WooCommerce. Please upgrade your store to WooCommerce 3.5 or greater to use it with this app.</string>
    <string name="login_avatar_content_description">Your profile photo</string>
    <string name="login_nostores_content_description">No WooCommerce stores</string>
    <string name="login_with_a_different_account">Login with a different account</string>
    <string name="login_no_stores">Unable to find WooCommerce stores\nconnected to this account</string>
    <string name="login_not_connected_to_account">It looks like %1$s is connected to a different WordPress.com account.</string>
    <string name="login_try_another_account">Try another account</string>
    <string name="login_try_another_store">Try another store</string>
    <string name="login_not_woo_store">It looks like %1$s is not a WooCommerce site. Install the WooCommerce plugin on your site and then %2$s</string>
    <string name="login_not_connected_jetpack">To use this app for %1$s you\'ll need to have the Jetpack plugin setup and connected to this account. \n\nOnce setup, %2$s</string>
    <string name="login_no_jetpack">To use this app for %1$s you\'ll need to have the Jetpack plugin setup and connected to a WordPress.com account</string>
    <string name="login_refresh_app">refresh the app</string>
    <string name="login_refresh_app_continue">refresh the app to continue</string>
    <string name="login_refresh_app_progress">Checking for WooCommerce…</string>
    <string name="login_refresh_app_progress_jetpack">Attempting to login with Jetpack…</string>
    <string name="login_view_connected_stores">View connected stores</string>
    <string name="login_jetpack_required_msg">To use the WooCommerce app you’ll need to set up the Jetpack plugin on your site</string>
    <string name="login_jetpack_view_instructions">View instructions</string>
    <string name="login_jetpack_view_setup_instructions">View setup instructions</string>
    <string name="login_jetpack_what_is">What is Jetpack?</string>
    <string name="login_jetpack_what_is_description">Jetpack is a free WordPress plugin that connects your store with the tools needed to give you the best mobile experience, including push notifications and stats</string>
    <string name="login_jetpack_installed_sign_in">Already have Jetpack? %1$s</string>
    <string name="login_jetpack_not_found">Jetpack not found. Please try again</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_need_help_finding_email">Need help finding the connected email?</string>
    <string name="login_email_help_title">What email do I use to sign in?</string>
    <string name="login_email_help_desc">In your site admin you can find the email you used to connect to WordPress.com from the %1$sJetpack Dashboard%2$s under %3$sConnections &gt; Account connection%4$s</string>
    <string name="login_discovery_error_title">Connection error</string>
    <string name="login_discovery_error_options">Here are a few other things you can try:</string>
    <string name="login_with_wordpress">Sign in with WordPress.com</string>
    <string name="login_troubleshooting_tips">Read our troubleshooting tips</string>
    <string name="login_discovery_error_option_select">Select an option</string>
    <string name="dashboard_stats_granularity_days">Days</string>
    <string name="dashboard_stats_granularity_weeks">Weeks</string>
    <string name="dashboard_stats_granularity_months">Months</string>
    <string name="dashboard_stats_granularity_years">Years</string>
    <string name="dashboard_stats_visitors">Visitors</string>
    <string name="dashboard_stats_orders">Orders</string>
    <string name="dashboard_stats_revenue">Revenue</string>
    <string name="dashboard_state_no_data">No revenue this period</string>
    <string name="dashboard_stats_error">Error fetching data</string>
    <string name="dashboard_stats_error_content_description">Error image</string>
    <string name="dashboard_stats_todays_stats">Today\'s Stats</string>
    <string name="dashboard_stats_updated_now">Updated moments ago</string>
    <string name="dashboard_stats_updated_minutes">Updated %d minutes ago</string>
    <string name="dashboard_stats_updated_one_hour">Updated 1 hour ago</string>
    <string name="dashboard_stats_updated_hours">Updated %d hours ago</string>
    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target Printer:</string>
    <string name="title_printerseries">Printer Series</string>
    <string name="title_lang">Lang</string>
    <string name="title_drawer">Drawer</string>
    <string name="btn_print">Print</string>
    <string name="btn_samplecoupon">Sample Coupon</string>
    <string name="btn_monitor">Status Monitoring</string>
    <string name="btn_setting">Setting</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="device_name">Device name</string>
</resources>