<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.printer.MainPrinterActivity" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnDiscovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btn_discovery" />

        <TextView
            android:id="@+id/txtTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/title_target"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/device_name"
            android:enabled="false"
            android:text="" />

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_print"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_printerseries"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spnModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_lang"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spnLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#6539B5"
            android:orientation="vertical"
            android:visibility="gone"></LinearLayout>

        <TextView
            android:id="@+id/txtDrawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="80dp"
            android:layout_marginRight="10dp"
            android:text="@string/title_drawer"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />


        <ToggleButton
            android:id="@+id/toggleDrawer"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:textOff="@string/off"
            android:textOn="@string/on" />

        <Button
            android:id="@+id/btnSampleCoupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_samplecoupon"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnMonitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btn_monitor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:text="@string/title_warnings"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtWarnings"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="none"
            android:enabled="false"
            android:focusable="false" />

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:text="@string/btn_setting" />

    </LinearLayout>

</ScrollView>
